cập nhật chức năng

--- a/StoreMartket.csproj
+++ b/StoreMartket.csproj
@@ -252,6 +252,7 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\ChangeCredentials.css" />
     <Content Include="Content\CreateDepartments.css" />
+    <Content Include="Content\DeleteDepartments.css" />
     <Content Include="Content\DeleteStore.css" />
     <Content Include="Content\login.css" />
     <Content Include="Content\Sidebar.css" />
@@ -311,6 +312,7 @@
     <Content Include="Views\Admin\DeleteStore.cshtml" />
     <Content Include="Views\Admin\CreateDepartments.cshtml" />
     <Content Include="Views\Admin\UpdateDepartments.cshtml" />
+    <Content Include="Views\Admin\DeleteDepartments.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
