--- a/StoreMartket.csproj
+++ b/StoreMartket.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\AddPosition.css" />
     <Content Include="Content\AddStore.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -257,6 +258,7 @@
     <Content Include="Content\login.css" />
     <Content Include="Content\Sidebar.css" />
     <Content Include="Content\UpdateDepartments.css" />
+    <Content Include="Content\UpdatePosition.css" />
     <Content Include="Content\UpdateStore.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -313,6 +315,8 @@
     <Content Include="Views\Admin\CreateDepartments.cshtml" />
     <Content Include="Views\Admin\UpdateDepartments.cshtml" />
     <Content Include="Views\Admin\DeleteDepartments.cshtml" />
+    <Content Include="Views\Admin\AddPosition.cshtml" />
+    <Content Include="Views\Admin\UpdatePosition.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
