cập nhật thêm mới các chức năng

--- a/StoreMartket.csproj
+++ b/StoreMartket.csproj
@@ -254,6 +254,7 @@
     <Content Include="Content\ChangeCredentials.css" />
     <Content Include="Content\CreateDepartments.css" />
     <Content Include="Content\DeleteDepartments.css" />
+    <Content Include="Content\DeletePosition.css" />
     <Content Include="Content\DeleteStore.css" />
     <Content Include="Content\login.css" />
     <Content Include="Content\Sidebar.css" />
@@ -317,6 +318,7 @@
     <Content Include="Views\Admin\DeleteDepartments.cshtml" />
     <Content Include="Views\Admin\AddPosition.cshtml" />
     <Content Include="Views\Admin\UpdatePosition.cshtml" />
+    <Content Include="Views\Admin\DeletePosition.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
